name:                tweedee
version:             0.1.0.0
synopsis:            Initial project template from stack, using test-framework with QuickCheck
description:         Please see README.md
homepage:            http://github.com/mankyKitty/tweedee#readme
license:             BSD3
license-file:        LICENSE
author:              Sean Chalmers
maintainer:          sclhiannan@gmail.com
copyright:           2016 Sean Chalmers
category:            Games
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                                  , radian
                                  , lens
  default-language:    Haskell2010

executable tweedee-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , tweedee
  default-language:    Haskell2010

test-suite tweedee-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , tweedee
                     , test-framework
                     , test-framework-quickcheck2
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/tweedee
